@startuml
'https://plantuml.com/class-diagram

class Inscripcion{
 -Alumno:nombre
 -materiasInscibirse: List<Materia>

 + aprobada() : Boolean
}

class Alumno{
 -nombre: String
 -materiasAprobadas: List<Materia>

 + evaluarCorrelativa(Materia correlativa): Boolean
}

class Materia{
 -nombre: String
 -correlativas:List<Materia>

 +puedeCursar(Alumno alumno): Boolean

}

Inscripcion --> Alumno
Inscripcion "*"--> Materia
Alumno "*"--> Materia
Materia "*"--> Materia

@enduml
